--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <script>
       alert("hello, world!");
+      console.log("This page contains a friendly greeting.");
+      let firstName = "Shu";
+      let lastName  = "Ito";
+      console.log(`${firstName} ${lastName}`);
     </script>
   </head>
   <body>
