--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <title>Learn Enough JavaSctipt</title>
     <meta charset="utf-8">
     <script>
-      alert("hello, world!");
-      console.log("This page contains a friendly greeting.");
-      let firstName = "Shu";
-      let lastName  = "Ito";
-      console.log(`${firstName} ${lastName}`);
+      const daysOfTheWeek = ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"];
+      let now = new Date();
+      let dayName = daysOfTheWeek[now.getDay()];
+      alert(`Hello, world! Happy ${dayName}.`);
     </script>
   </head>
   <body>
